--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.example</groupId>
-  <artifactId>click-character</artifactId>
+  <artifactId>shroom-companion</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
@@ -50,7 +50,7 @@
           </descriptorRefs>
           <archive>
             <manifest>
-              <mainClass>org.example.ClickCharacterApp</mainClass> <!-- замени на свой -->
+              <mainClass>org.example.ShroomCompanion</mainClass> <!-- замени на свой -->
             </manifest>
           </archive>
         </configuration>
