--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>click-character</name>
+  <name>shroom-companion</name>
   <url>http://maven.apache.org</url>
 
   <properties>
